--- a/register.yml
+++ b/register.yml
@@ -4,9 +4,6 @@
     - name: register host to my satellite
       shell:
         "rpm -Uvh http://satellite.local.net/pub/katello-ca-consumer-latest.noarch.rpm"
-   
-  tasks:
-    - name: register host to my satellite
-      shell:
-        "subscription-manager register --activationkey=rhel7  --organization=Default_Organization"
+        
+        "subscription-manager register --org=Default_Organization --activationkey=rhel7"
       
