--- a/register.yml
+++ b/register.yml
@@ -2,8 +2,7 @@
 - hosts: all
   tasks:
     - name: register host to my satellite
-      shell:
-        "rpm -Uvh http://satellite.local.net/pub/katello-ca-consumer-latest.noarch.rpm"
-        
-        "subscription-manager register --org=Default_Organization --activationkey=rhel7"
+      cmd: |
+        rpm -Uvh http://satellite.local.net/pub/katello-ca-consumer-latest.noarch.rpm      
+        subscription-manager register --org=Default_Organization --activationkey=rhel7
       
