--- a/install_cockpit.yml
+++ b/install_cockpit.yml
@@ -5,7 +5,7 @@
       include_role:
         name: redhat.rhel_system_roles.cockpit
       vars:
-        cockpit_packages: default
-        #cockpit_packages: minimal
+        #cockpit_packages: default
+        cockpit_packages: minimal
         #cockpit_packages: full
 
