--- a/ping.yml
+++ b/ping.yml
@@ -1,3 +1,5 @@
 ---
-- name: ping the server
-  ansible.builtin.ping:
+- hosts: all
+  tasks:
+    - name: ping the server
+      ansible.builtin.ping:
