--- a/linttest.yml
+++ b/linttest.yml
@@ -2,7 +2,7 @@
 - hosts: all
   tasks:
     - name: test lint
-      shell: ansible-lint test.yml
+      shell: /usr/bin/ansible-lint /root/test.yml
       register: out
 
     - debug:
