--- a/uptime.yml
+++ b/uptime.yml
@@ -2,8 +2,8 @@
 - hosts: all
   tasks:
     - name: test lint
-      shell: uptime
+@      shell: uptime
 #      register: out
-#
+       shell: hostname
 #    - debug:
 #        var: out
