--- a/linttest.yml
+++ b/linttest.yml
@@ -2,7 +2,7 @@
 - hosts: all
   tasks:
     - name: test lint
-      shell: ansible-lint /root/copy.yml
+      shell: ansible-lint /root/test.yml
       ignore_errors: true
       register: out
 
