--- a/linttest.yml
+++ b/linttest.yml
@@ -2,7 +2,9 @@
 - hosts: localhost
   tasks:
     - name: test lint
-      shell: ansible-lint /tests/test.yml
+      shell: |
+        ansible-lint --version
+        ansible-lint /tests/test.yml
       ignore_errors: true
       register: out
 
