--- a/linttest.yml
+++ b/linttest.yml
@@ -1,18 +1,13 @@
 ---
 - hosts: localhost
   tasks:
-    - name: remove config
-      shell: rm -f /runner/.config/ansible-lint.yml
-      
-    - name: remove config 2
-      shell: rm -f /runner/project/.config/ansible-lint.yml
-    
     - name: test lint
       shell: ansible-lint /tests/test.yml
       ignore_errors: true
       register: out
-    
-  
+      
+    - name: uptime
+      shell: ls . jjjj
 
 #    - debug:
 #        var: out
